# lora-reward-density

./: .gitignore  README.md  pyproject.toml
modal_app/: baseline_eval.py  reward_debug.py  smoke_test.py  train.py
scripts/: analyze_baseline.py  grpo_correctness_harness.py
src/lora_reward_density/: analysis.py  data.py  distillation_reward.py  grpo.py  outcome_reward.py  process_reward.py  rewards.py  rollout.py  run_dir.py  seeding.py  train.py
tests/: test_analysis.py  test_data.py  test_distillation_reward.py  test_outcome_reward.py  test_process_reward.py  test_rollout.py  test_run_dir.py  test_seeding.py  test_train.py
